set up the structure of the document and add first feature, list all files extensions

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - This CHANGELOG file to hopefully keep a track of all features that will be added.
 - README to explain the project and how to use it.
 - MIT license because we <3 open-source projects.
+- List all files extensions in a folder and subfolders
 
 
 
