--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,18 +6,10 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Planned]
+### Added
 |Feature|Example Features|Benefit
 |:-|:-|:-|
-|Dynamic Filtering|Custom scripts, regex, metadata rules|Extensible, powerful filtering
-|Multi-Source|Multiple source dirs, exclusion rules|Manage files from anywhere
 |Regrouping|Nested, virtual, tag-based|Dynamic, rule-based file views
-|Safety|Conflict handling, dry run, backups|Safe, predictable operation
-|Automation|Watch mode, schedules, triggers|Set-and-forget automation
-|Cloud/Remote|Cloud storage, remote sync|Extend beyond local storage
-|UI/Accessibility|TUI, web dashboard, accessibility|User-friendly, inclusive
-|Logging/Reports|Detailed logs, reports, visualization|Transparency, insights
-|Collaboration|Shared configs, team workspaces|Community, teamwork
-|Performance|Parallel, batch, resume|Scalable, efficient
 
 ## [Unreleased]
 
@@ -27,6 +19,19 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - README to explain the project and how to use it.
 - MIT license because we <3 open-source projects.
 - List all files extensions in a folder and subfolders
+- Classify document using dynamic filters and dynamic strategy so you can add your own pluggins
+    - Multi-source directory
+    - The basics filters added are :
+        - filter files based on their extensions
+        - filter files based on a regex pattern
+    - The basics strategies added are :
+        - classify files based on their last modified date
+        - classify files based on the src hierachy folder
+    - An option for parallelism to speedup the process
+    - Stats on files a processing them
+    - Conflict are handle in 3 different ways (skip, overwrite or rename)
+        - default comportement of rename is ti check if the file is the same before moving it, if it is, it will skip it
+    - Dry-run is also possible showing you the stats
 
 
 
