delete listAllExtensions since it does not belong to the project structure

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,9 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Planned]
 ### Added
-|Feature|Example Features|Benefit
-|:-|:-|:-|
-|Regrouping|Nested, virtual, tag-based|Dynamic, rule-based file views
+
 
 ## [Unreleased]
 
@@ -18,7 +16,6 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - This CHANGELOG file to hopefully keep a track of all features that will be added.
 - README to explain the project and how to use it.
 - MIT license because we <3 open-source projects.
-- List all files extensions in a folder and subfolders
 - Classify document using dynamic filters and dynamic strategy so you can add your own pluggins
     - Multi-source directory
     - The basics filters added are :
@@ -32,6 +29,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
     - Conflict are handle in 3 different ways (skip, overwrite or rename)
         - default comportement of rename is ti check if the file is the same before moving it, if it is, it will skip it
     - Dry-run is also possible showing you the stats
+    - Regrouping file views
 
 
 
