--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 
+1. Standardize FolderFlow binary to be named `ff`
+    - `cmd/folderflow` -> `cmd/ff``
+    - `.gitignore`, `README.md` and `.github/worflows/*.yaml` have been udated accordingly
+
 ### Removed
 
 ## [0.1.0] - 2025-12-25
