--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 
+**Changement de licence**
+Ce projet passe de la licence MIT à la licence GPLv3.
+Ce changement reflète notre engagement envers la transparence et le partage des modifications.
+Pour plus de détails, consultez le fichier [LICENSE](LICENSE).
+
 ### Removed
 
 ## [0.1.1] - 2025-12-28
